# ElderOS

./: .gitignore  ElderOS Phase 1 Product Spec v1.2.md  ElderOS_Phase_1_Product_Spec.docx  Pricing Sheet.docx  claude.md  claude_UI.md  docker-compose.yml  enterprise_os_master.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/scripts/: create_admin.py  seed.py
backend/src/: config.py  database.py  main.py
backend/src/api/: alerts.py  auth.py  call_bell.py  devices.py  edge.py  facility.py  incidents.py  reports.py  residents.py  review.py  rooms.py  router.py  settings.py  system.py  websocket.py
backend/src/core/: dependencies.py  exceptions.py  permissions.py  security.py
backend/src/models/: __init__.py  audit_log.py  call_bell.py  escalation.py  event.py  incident.py  resident.py  room.py  sensor.py  settings.py  system_metrics.py  unit.py  user.py
backend/src/schemas/: alert.py  auth.py  call_bell.py  common.py  device.py  edge.py  facility.py  incident.py  report.py  resident.py  review.py  room.py  settings.py  system.py
backend/src/services/: alert_service.py  (+15 more)
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_callbell.py  test_escalation.py  test_incidents.py  test_websocket.py
edge/: Dockerfile  pyproject.toml  requirements.txt
edge/config/: default.yaml  sensors.yaml
edge/src/: config.py  main.py
edge/tests/: test_confidence_scorer.py  test_event_buffer.py  test_event_processor.py  test_health_reporter.py  test_pose_rules.py  test_sensor_fusion.py
(+363 files in other folders)
